[package]
name = "co2key"
version = "0.2.0"
edition = "2021"

description = "CLI tool to map game controller input to simulated key presses"
repository = "https://github.com/maun/co2key"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["cli", "games", "input", "automation"]
categories = ["command-line-utilities"]

exclude = ["*.json"]

[dependencies]
gilrs = { version = "0.10.9", features = ["serde-serialize"] }
rdev = { version = "0.5.3", features = ["serialize"] }
serde_json = "1.0.122"
serde = { version = "1.0.204", features = ["derive"] }
clap = { version = "4.5.13", features = ["cargo"] }
